--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '21'
 
       - name: Compile Java file
-        run: javac Main.java
+        run: javac src/Main.java
 
       - name: Run Java program
         run: java HelloWorld
